# smart_car

./: README.md  backup_main_2.c.bak  backup_maina.c.bak  projekat.docx
application/: .gitignore  README.md  grep  pubspec.yaml
application/Assets/Prefabs/: UnityMainThreadDispatcher.prefab
application/Assets/Scenes/: SampleScene.unity
application/Assets/Scripts/: VideoReceiver.cs
application/ProjectSettings/: ProjectSettings.asset
application/android/app/: CMakeLists.txt  build.gradle
application/android/app/src/debug/: AndroidManifest.xml
application/android/app/src/main/: AndroidManifest.xml
application/android/app/src/profile/: AndroidManifest.xml
application/lib/: image_thing.dart  main.dart
application/lib/classes/: ip_address.dart  opencv_facade.dart  self_driving_car_icons_icons.dart  websocket.dart
application/lib/opencv-cpp/: detect_lines.cpp  gaussian.cpp
application/lib/pages/: bluetooth_manager.dart  image_processing_test.dart  landing_page.dart
application/lib/widgets/: lights_widget.dart  video_player.dart  wifi_connect.dart
application/test/: test_server.py
driver/: .gitignore  .mxproject  Makefile  driver.ioc
driver/Core/Inc/: main.h  messages.h
driver/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
driver/arduino_driver/arduino_driver_main/: arduino_driver_main.ino  distance_check.ino  main.h  (+3 more)
esp32/main/: camera_setup.cpp  camera_setup.h  json_messages.cpp  json_messages.h  main.ino  messages.h  states.h
ffi_opencv_plugin/: pubspec.yaml
ffi_opencv_plugin/example/: .flutter-plugins-dependencies  pubspec.yaml
(+1 files in other folders)
